log
Wed 27 Mar 2024 02:40:47 PM UTC: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:8: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   33 |   lista->head=NULL;
      |        ^~
list.c:32:25: note: referencing an object of size 8 allocated by ‘malloc’
   32 |   List *lista = (List *)malloc(sizeof(lista));
      |                         ^~~~~~~~~~~~~~~~~~~~~
list.c:34:8: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   34 |   lista->tail=NULL;
      |        ^~
list.c:32:25: note: referencing an object of size 8 allocated by ‘malloc’
   32 |   List *lista = (List *)malloc(sizeof(lista));
      |                         ^~~~~~~~~~~~~~~~~~~~~
list.c:35:8: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   35 |   lista->current=NULL;
      |        ^~
list.c:32:25: note: referencing an object of size 8 allocated by ‘malloc’
   32 |   List *lista = (List *)malloc(sizeof(lista));
      |                         ^~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
dbc80f5
Wed 27 Mar 2024 02:41:13 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
609c27f
Wed 27 Mar 2024 06:34:11 PM UTC: 
 tests:  1|5
total_score: 10/70
a79c2e2
Wed 27 Mar 2024 06:35:10 PM UTC: 
 list.c | 65 +++++++++++++++++++++++++++++++++++++++++++++++++++++++----------
 1 file changed, 55 insertions(+), 10 deletions(-)
 tests:  0|0
1bff083
Wed 27 Mar 2024 06:40:30 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:54:29: error: expected ‘;’ before ‘list’
   54 |   list->current = list->tail    //Sino se asigna el dato del último nodo al current para después retornarlo.
      |                             ^
      |                             ;
   55 |   list->current->next->next;
      |   ~~~~                       
Compilation failed
b2efd1e
Wed 27 Mar 2024 06:43:51 PM UTC: 
 list.c | 12 ++++++++----
 1 file changed, 8 insertions(+), 4 deletions(-)
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:54:29: error: expected ‘;’ before ‘list’
   54 |   list->current = list->tail
      |                             ^
      |                             ;
   55 |   list->current->next->next;
      |   ~~~~                       
Compilation failed
a2d0326
Wed 27 Mar 2024 06:44:21 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:55:22: error: statement with no effect [-Werror=unused-value]
   55 |   list->current->next->next;
      |   ~~~~~~~~~~~~~~~~~~~^~~~~~
cc1: all warnings being treated as errors
Compilation failed
b7d25de
Wed 27 Mar 2024 06:47:08 PM UTC: 
 list.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:55:22: error: statement with no effect [-Werror=unused-value]
   55 |   list->current->next->next;
      |   ~~~~~~~~~~~~~~~~~~~^~~~~~
list.c: In function ‘popCurrent’:
list.c:117:9: error: unused variable ‘data’ [-Werror=unused-variable]
  117 |   void *data = list->current->data;
      |         ^~~~
list.c: At top level:
list.c:120:5: error: expected identifier or ‘(’ before ‘else’
  120 |   } else{
      |     ^~~~
list.c:124:3: error: expected identifier or ‘(’ before ‘return’
  124 |   return (void*)data;
      |   ^~~~~~
list.c:125:1: error: expected identifier or ‘(’ before ‘}’ token
  125 | }
      | ^
list.c: In function ‘popCurrent’:
list.c:120:3: error: control reaches end of non-void function [-Werror=return-type]
  120 |   } else{
      |   ^
cc1: all warnings being treated as errors
Compilation failed
160a7d9
Wed 27 Mar 2024 06:47:35 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:55:22: error: statement with no effect [-Werror=unused-value]
   55 |   list->current->next->next;
      |   ~~~~~~~~~~~~~~~~~~~^~~~~~
cc1: all warnings being treated as errors
Compilation failed
3badc19
Wed 27 Mar 2024 07:04:10 PM UTC: 
 list.c | 17 ++++++++++++-----
 1 file changed, 12 insertions(+), 5 deletions(-)
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:55:22: error: statement with no effect [-Werror=unused-value]
   55 |   list->current->next->next;
      |   ~~~~~~~~~~~~~~~~~~~^~~~~~
cc1: all warnings being treated as errors
Compilation failed
9d43f7b
Wed 27 Mar 2024 07:04:51 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  12|0
total_score: 70/70
31c084d
Wed 27 Mar 2024 08:01:29 PM UTC: 
 tests:  12|0
total_score: 70/70
397a844
Wed 27 Mar 2024 08:03:33 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|0
total_score: 70/70
17a854d
